--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "typescript": "^4.9.5",
+    "redux-mock-store": "^1.5.4",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@types/uuid": "^9.0.1",
+    "@types/redux-mock-store": "^1.0.3",
     "node-sass": "npm:sass@^1.49.9"
   }
 }
